# mrpt_reactivenav

./: .gitignore  CMakeLists.txt  README.md  blp_plugin.xml  nodelet_plugin.xml  nodelet_reac_plugin.xml  package.xml
cfg/: rvizco.rviz
include/test_lib/: mrpt_local_obstacles_node.cpp  mrpt_reactivenav_node.h  mrpt_reactivenav_nodelet.h  shape_publisher3D.h  testlib.h
launch/: camera1.launch  camera_opensense.launch  hector_mapping.launch  laser_move_base_mrpt.launch  move_base_mrpt.launch  reactive_alone.launch  reactive_nav_demo_with_stage.launch  reactive_nav_demo_with_stage3D.launch  simbot_move_base.launch  simbot_stage.launch  stage.launch  test_mrpt_obstacles.launch  test_nodelet.launch  test_obstacles_inside.launch  test_pointcloud_downscaled.launch  test_pointcloud_to_laser.launch  test_simbot_navigation.launch  test_simbot_navigation3D.launch  test_simbot_navigation3D_cloud.launch  test_simbot_navigation3D_lab.launch  test_simbot_navigation3D_only_laser.launch  tf_camera_link.launch
maps/: MAPIRlab_furniture.world  MAPIRlab_furniture_3D.world  MAPIRlab_furniture_3D2cam.world  MAPIRlab_furniture_3D2cam_giraff.world  MAPIRlab_furniture_3D2cam_giraff_obstacles3D.world  MAPIRlab_furniture_3Dtable.world  MAPIRlab_furniturecase1.world  MAPIRlab_furniturecase2.world  MAPIRlab_furniturecase3.world  MAPIRlab_furniturecase4.world  movecare_map.world  movecare_map.yaml
move_base_conf/: simbot_costmap_common_params.yaml  simbot_costmap_global_params.yaml  simbot_local_planner_params.yaml
src/: mrpt_reactivenav_node.cpp  mrpt_reactivenav_nodelet.cpp  testlib.cpp
tutorial/: reactive2d_config4.ini  reactive2d_custom_config.ini  reactive3d_config.ini  reactive3d_custom_config.ini  reactive3d_custom_config_giraff.ini  reactive3d_custom_config_sim.ini
